testdata/zkc/invalid/memory_10.zkc
//error:2:9-14:memory not visible here
fn f<buffer,buffer>(addr:u16) -> (byte:u8) {
  byte = buffer[addr]
  return
}
